[tool.poetry]
name = "pao2-prediction"
version = "2.0"
description = ""
authors = ["Andrea Gutmann <andrea.gutmann@campus.lmu.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
pandas = "2.1.1"
matplotlib = "3.8.0"
seaborn = "0.13.0"
numpy = "1.26.0"
scipy = "1.11.3"
statsmodels = "0.14.0"
pyyaml = "6.0.1"
scikit-learn = "1.3.1"
notebook = "7.0.4"
session-info = "1.0.0"
shap = "0.46.0"
ipykernel = "^6.29.5"
ipython = "^8.30.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
